--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,14 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimary">@android:color/background_dark</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:navigationBarColor">@android:color/background_light</item>
+        <item name="android:colorForeground">@color/colorPrimary</item>
+        <item name="android:colorBackground">@android:color/background_dark</item>
     </style>
+
+    <style name="Theme.Material.Light.NoActionBar.Light.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar" />
 
 </resources>
